# 1Exchange

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  build.rs
.github/workflows/: deploy-prod.yml  release-latest.yml  rust.yml
src/: auth.rs  credentials.rs  custom_account_sources.rs  exchanges.rs  funds.rs  main.rs  models.rs  rates.rs  virtual_accounts.rs
src/exchanges/: aster.rs  binance.rs  bitget.rs  common.rs  earnbyai.rs  gate.rs  htx.rs  hyperliquid.rs  okx.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx  styles.css
